# Hartree-Fock-App-Linux

./: .gitignore  .travis.yml  CMakeLists.txt  HF.sh  HF.txt  README.md  o.txt  results.txt  script.py
CUDA/: GPUAccelerator.cu
basis_set/: AO10.txt  AO2.txt  AO3.txt  AO4.txt  AO5.txt  AO6.txt  AO7.txt  AO8.txt
basis_set1/: AO1.txt  AO11.txt  AO12.txt  AO13.txt  AO14.txt  AO15.txt  AO16.txt  AO17.txt  AO18.txt  AO19.txt  AO2.txt  AO20.txt  AO22.txt  AO26.txt  AO3.txt  AO4.txt  AO9.txt
basis_set2/: AO1.txt  AO10.txt  AO11.txt  AO12.txt  AO13.txt  AO14.txt  AO15.txt  AO16.txt  AO17.txt  AO18.txt  AO19.txt  AO2.txt  AO20.txt  AO22.txt  AO26.txt  AO3.txt  AO4.txt  AO5.txt  AO6.txt  AO7.txt  AO8.txt  AO9.txt
examples/: Be.txt  Benzene.txt  Benzene_COMP.txt  Butane.txt  C.txt  CO2.txt  CO2_COMP.txt  Chlorobenzene.txt  Ethanol.txt  H2.txt  H2O.txt  H2O_COMP.txt  H2SO4.txt  HF.txt  He.txt  He2_not_ex.txt  LiH.txt  Methyl_amine.txt  MgCl2.txt  O3.txt  TiO2.txt  TiO2_COMP.txt  methyl_amine.txt
examples/test_small_molecules/: 10_Ne2.txt  11_NaF.txt  12_MgO.txt  13_AlH.txt  14_SiO.txt  15_PH.txt  16_SO.txt  17_HCl.txt  18_Ar2.txt  19_NaK.txt  1_H2.txt  20_CaC.txt  22_TiO.txt  26_Fe.txt  2_HeH.txt  3_LiH.txt  4_Be2.txt  5_B2.txt  6_CO.txt  7_N2.txt  8_O2.txt  9_F2.txt
include/: App.h  BasisSet.h  Boys.h  Constants.h  ContractedGTO.h  EigenSolver.h  GPUAccelerator.h  GaussianOrbital.h  InputParser.h  Logger.h  Mol.h  Nucleon.h  Orbital.h  OutputCreator.h  Position.h
int/: plain_13.txt
scripts/: sc.py  sc3.py
src/: App.cpp  BasisSet.cpp  Boys.cpp  ContractedGTO.cpp  GaussianOrbital.cpp  InputParser.cpp  Logger.cpp  Mol.cpp  Orbital.cpp  OutputCreator.cpp  Position.cpp  main.cpp
